bug overflow hidden

--- a/style.css
+++ b/style.css
@@ -82,9 +82,12 @@ footer a {
 
 /* Body // Content */
 .content {
+  /* border: 5px solid red; */
   overflow-x: hidden;
+  overflow-y: auto;
   position: absolute;
   top: 175px;
+  height: calc(100%-175px);
   /* column-count: 2;
   column-gap: 0px; */
 }
@@ -186,4 +189,16 @@ footer a {
   height: 200px;
   width: 200px;
   z-Index: -2;
+}
+
+
+/* .overflow-container {
+  border: 5px solid red;
+  position: relative;
+  top: 200px;
+  height: 500px;
+} */
+
+#root {
+  position: relative;
 }
